--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   pin_code_fields: ^8.0.1
+  timer_count_down: ^2.2.2
 
 dev_dependencies:
   flutter_test:
